[tool.poetry]
name = "plot"
version = "0.1.0"
description = ""
authors = ["ToshihikoSakai"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
